--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,30 +26,11 @@ jobs:
         run: GOOS=windows GOARCH=amd64 go build -v -o go-home-or-away-windows.exe ./...
 
       - name: Create Release
-        id: create_release
-        uses: softprops/action-gh-release@v1
-        with:
-          tag_name: release-${{ github.run_number }}
-          name: Release ${{ github.run_number }}
-          draft: false
-          prerelease: false
-
-      - name: Upload Linux Asset
-        uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./go-home-or-away-linux
-          asset_name: go-home-or-away-linux
-          asset_content_type: application/octet-stream
-
-      - name: Upload Windows Asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./go-home-or-away-windows.exe
-          asset_name: go-home-or-away-windows.exe
-          asset_content_type: application/octet-stream
+        run: |
+          gh release create $(date +'%Y-%m-%d-%H-%M-%S') \
+            --title "Release $(date +'%Y-%m-%d-%H-%M-%S')" \
+            --notes "New release" \
+            ./go-home-or-away-linux \
+            ./go-home-or-away-windows.exe
